# cal-proxy

./: .dockerignore  Cargo.toml  Dockerfile  README.md  justfile
src/: index.html  main.rs
