[package]
name = "cal-proxy"
version = "0.1.3"
edition = "2024"

[dependencies]
axum = "0.8"
hyper = { version = "1.8", features = ["full"] }
hyper-tls = "0.6"
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
bytes = "1"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
tower = "0.5"
serde = { version = "1.0", features = ["derive"] }
